# ct_restart_python

./: .gitignore  README.md  __init__.py
backend-python/: .coverage  .env.example  CYG YAML Seed node id  Dockerfile  README.md  Search Areas _ ClinicalTrials.gov.xlsx  fastapi_ai_copilot.py  neo4j_test.py  neo4j_upload_results.json  pyproject.toml  pytest_logs.txt  requiremens.txt  run_tests.sh  setup.py  test_log.txt  validation_report_20250129_190203.json  validation_report_20250129_190428.json  ~$Search Areas _ ClinicalTrials.gov.xlsx
backend-python/.github/workflows/: ci.yml
backend-python/app/: main.py
backend-python/app/config/: __init__.py  database.py  logging_config.py  settings.py
backend-python/app/middleware/: __init__.py  error_handler.py  logging.py  validation.py  validation_handler.py
backend-python/app/migrations/versions/: 001_initial.py  002_enhanced_schema.py  003_schema_registry.py
backend-python/app/models/: Current _data_flow _patterns.md  Starting_Mongo_Schemas _nd_connectivity.md  __init__.py  analysis_options.py  company.py  kg_integration.py  kg_relationships.py  kg_status.py  kg_storage.py  trial.py  trial_analysis.py
backend-python/app/monitoring/: metrics.py
backend-python/app/routes/: __init__.py  chat_copilot_routes.py  company_routes.py  gpt_copilot_routes.py  health.py  schema_routes.py  trial_routes.py
backend-python/app/scripts/: __init__.py  run_pre_validation.py
backend-python/app/services/: __init__.py  background_service.py  cache_service.py  chat_copilot_services.py  clinical_trials_service.py  company_service.py  enrichment_service.py  gpt_copilot_services.py  ml_analysis.py  neo4j_yaml_uploader.py  schema_service.py  trial_analysis.py  trial_graph_service.py  trial_service.py  workspace_manager.py
backend-python/app/system_specs/: __init__.py  schema_manager.py  schemas.py  validators.py
backend-python/app/system_specs/validation/: __init__.py  pre_update.py  utils.py
backend-python/app/tests/: __init__.py  conftest.py  test_company_routes.py  test_company_service_TestClient.py  test_company_services.py  test_company_services_TestClient.py  test_config.py  test_integration.py  test_output.txt  test_trial_analysis.py  test_trial_analytics_service.py  test_trial_routes.py  testclient_test.py
backend-python/app/tests/fixtures/: load_real_data.py  trial_data.py
backend-python/ct_client/: pyproject.toml
backend-python/ct_client/clinical_trials_gov_rest_api_client/: __init__.py  client.py
backend-python/ct_client/clinical_trials_gov_rest_api_client/models/: adverse_event.py  adverse_events_module.py  annotation_module.py  annotation_section.py  arm_group.py  arms_interventions_module.py  avail_ipd.py  baseline_characteristics_module.py  baseline_measure.py  (+102 more)
backend-python/future_concepts_Tests and Services/: __init__.py  test_advanced_analysis.py
backend-python/future_concepts_Tests and Services/future_concepts/: README.md  __init__.py  future_comparative_analysis.py
backend-python/k8s/: deployment.yaml
backend-python/scripts/: migrate_data.py  run_migrations.py  run_verify.sh  verify_data.py
backend-python/tests/: __init__.py
backend-python/tests/integration/: __init__.py
backend-python/tests/unit/: __init__.py
(+9 files in other folders)
