[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "ct_restart_python_BE"
version = "0.1.0"
description = "Clinical Trials Backend API"
authors = ["Ned Harvey <nedharvey1197@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"  # Updated to the latest version you installed
uvicorn = "^0.24.0"
motor = "^3.6.1"
redis = {version = "^5.2.1", extras = ["hiredis"]}
beautifulsoup4 = "^4.12.3"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
neo4j = "^5.27.0"
python-dotenv = "^1.0.1"
anyio = "^3.7.1"
dnspython = "^2.7.0"
h11 = "^0.14.0"
httpcore = "^1.0.7"
iniconfig = "^2.0.0"
pymongo = "^4.9.2"
sniffio = "^1.3.1"
starlette = "^0.45.3"  # Updated to the latest version you installed
typing_extensions = "^4.12.2"
asgi-lifespan = "^2.1.0"
requests = "^2.32.3"
openai = "^1.61.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
httpx = "^0.28.1"
pytest-cov = "^6.0.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.6.1"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
pythonpath = ["."]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/tests/*",
    "app/services/future_concepts/*",
    "app/tests/future_concepts/*",
]